# brot

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE
include/brot/: iterate.h  math.h  options.h  parallel_sort.h  rand.h
src/: brot.cpp  options.cpp
src/math/: iterate.nasm  linux-x86-64-log.nasm  math.h  rand.nasm
test/: CMakeLists.txt  iterate.cpp  math_log.cpp  math_log_timing.cpp  rand.cpp
